[package]
name = "ipfix"
version = "0.1.0"
authors = ["Cédric Deconinck <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
env_logger = "0.8.3"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.2"
serde_repr = "0.1.6"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
pretty_assertions = "0.7.1"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"