[package]
name = "ipfix"
version = "0.1.0"
authors = ["Cédric Deconinck <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
structopt = "0.3"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
pretty_assertions = "0.7.1"
hex-literal = "0.3.1"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"